--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://neeleshsa:<password>@cluster0-mnph0.gcp.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://neeleshsa:qwert@cluster0-mnph0.gcp.mongodb.net/test?retryWrites=true&w=majority
